# loan-advisor-chatbot

./: .gitignore  readme.md
.github/workflows/: cd.yml  ci.yml
backend/: package-lock.json  package.json
backend/src/: index.ts
frontend/app/: page.tsx
frontend/components/: lender-card.tsx  message-list.tsx
frontend/hooks/: use-websocket.ts
frontend/types/: chat.ts
ml/: .dockerignore  Dockerfile  README.md  chat_tester.html  loan_matcher.py  main.py  models.py  pyproject.toml  train_model.py
ml/data/: lenders.json
ml/trained_model/: loan_predictor_model.joblib  training_columns.json
